[gd_scene load_steps=4 format=3 uid="uid://dglqw5flk22gi"]

[ext_resource type="Script" path="res://ui/ingame_ui.gd" id="1_j475u"]
[ext_resource type="Script" path="res://ui/inventory_item_list.gd" id="2_0oi5u"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ukorj"]

[node name="PlayerUiRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j475u")

[node name="PlayerUi" type="TabContainer" parent="."]
clip_contents = true
layout_mode = 0
offset_right = 1150.0
offset_bottom = 650.0
current_tab = 0

[node name="ItemsHSplitContainer" type="HSplitContainer" parent="PlayerUi"]
layout_mode = 2
split_offset = 500
metadata/_tab_index = 0

[node name="DescEquipVSplitContainer" type="VSplitContainer" parent="PlayerUi/ItemsHSplitContainer"]
layout_mode = 2
split_offset = 300

[node name="Description" type="RichTextLabel" parent="PlayerUi/ItemsHSplitContainer/DescEquipVSplitContainer"]
layout_mode = 2
text = "test image ^
test description"

[node name="ImageEquipHSplitContainer" type="HSplitContainer" parent="PlayerUi/ItemsHSplitContainer/DescEquipVSplitContainer"]
layout_mode = 2
split_offset = 200

[node name="ItemImage" type="TextureRect" parent="PlayerUi/ItemsHSplitContainer/DescEquipVSplitContainer/ImageEquipHSplitContainer"]
layout_mode = 2
texture = SubResource("CanvasTexture_ukorj")

[node name="EquipPanel" type="Panel" parent="PlayerUi/ItemsHSplitContainer/DescEquipVSplitContainer/ImageEquipHSplitContainer"]
visible = false
layout_mode = 2

[node name="ArmsPanel" type="Panel" parent="PlayerUi/ItemsHSplitContainer/DescEquipVSplitContainer/ImageEquipHSplitContainer/EquipPanel"]
layout_mode = 0
offset_left = 196.0
offset_top = 25.0
offset_right = 265.0
offset_bottom = 95.0

[node name="HeadPanel" type="Panel" parent="PlayerUi/ItemsHSplitContainer/DescEquipVSplitContainer/ImageEquipHSplitContainer/EquipPanel"]
layout_mode = 0
offset_left = 17.0
offset_top = 31.0
offset_right = 86.0
offset_bottom = 101.0

[node name="LegsPanel" type="Panel" parent="PlayerUi/ItemsHSplitContainer/DescEquipVSplitContainer/ImageEquipHSplitContainer/EquipPanel"]
layout_mode = 0
offset_left = 104.0
offset_top = 31.0
offset_right = 173.0
offset_bottom = 101.0

[node name="PrimaryPanel" type="Panel" parent="PlayerUi/ItemsHSplitContainer/DescEquipVSplitContainer/ImageEquipHSplitContainer/EquipPanel"]
layout_mode = 0
offset_left = 150.0
offset_top = 218.0
offset_right = 219.0
offset_bottom = 288.0

[node name="SecondaryPanel" type="Panel" parent="PlayerUi/ItemsHSplitContainer/DescEquipVSplitContainer/ImageEquipHSplitContainer/EquipPanel"]
layout_mode = 0
offset_left = 28.0
offset_top = 217.0
offset_right = 97.0
offset_bottom = 287.0

[node name="SpellPanel" type="Panel" parent="PlayerUi/ItemsHSplitContainer/DescEquipVSplitContainer/ImageEquipHSplitContainer"]
layout_mode = 2

[node name="spell_0" type="Panel" parent="PlayerUi/ItemsHSplitContainer/DescEquipVSplitContainer/ImageEquipHSplitContainer/SpellPanel"]
layout_mode = 0
offset_left = 195.0
offset_top = 122.0
offset_right = 264.0
offset_bottom = 192.0

[node name="spell_1" type="Panel" parent="PlayerUi/ItemsHSplitContainer/DescEquipVSplitContainer/ImageEquipHSplitContainer/SpellPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 123.0
offset_right = 89.0
offset_bottom = 193.0

[node name="spell_2" type="Panel" parent="PlayerUi/ItemsHSplitContainer/DescEquipVSplitContainer/ImageEquipHSplitContainer/SpellPanel"]
layout_mode = 0
offset_left = 111.0
offset_top = 19.0
offset_right = 180.0
offset_bottom = 89.0

[node name="spell_3" type="Panel" parent="PlayerUi/ItemsHSplitContainer/DescEquipVSplitContainer/ImageEquipHSplitContainer/SpellPanel"]
layout_mode = 0
offset_left = 111.0
offset_top = 210.0
offset_right = 180.0
offset_bottom = 280.0

[node name="InventoryItemList" type="ItemList" parent="PlayerUi/ItemsHSplitContainer"]
layout_mode = 2
script = ExtResource("2_0oi5u")

[node name="MainMenuItemList" type="ItemList" parent="."]
visible = false
layout_mode = 0
offset_left = 374.0
offset_top = 182.0
offset_right = 681.0
offset_bottom = 300.0
item_count = 2
item_0/text = "save game"
item_1/text = "quit"

[node name="SpellGridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 513.0
offset_right = 179.0
offset_bottom = 577.0
columns = 2

[node name="WeaponGridContainer" type="GridContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 902.0
offset_top = 505.0
offset_right = 942.0
offset_bottom = 545.0
columns = 2

[connection signal="item_clicked" from="PlayerUi/ItemsHSplitContainer/InventoryItemList" to="." method="_on_inventory_item_list_item_clicked"]
[connection signal="item_selected" from="PlayerUi/ItemsHSplitContainer/InventoryItemList" to="." method="_on_inventory_item_list_item_selected"]
[connection signal="item_selected" from="MainMenuItemList" to="." method="_on_main_menu_item_list_item_selected"]
